--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "pinia": "^2.1.7",
     "sass": "^1.77.8",
     "vue": "^3.4.29",
